[gd_scene load_steps=2 format=3 uid="uid://bgsi3yx2mr1rj"]

[ext_resource type="Script" uid="uid://caisy8icvhj45" path="res://components/ui/login_settings_panel_container.gd" id="1_ubyeg"]

[node name="LoginSettingsPanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ubyeg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Manage Profiles"
horizontal_alignment = 1

[node name="ProfileSelector" type="OptionButton" parent="VBoxContainer"]
focus_mode = 0
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
focus_mode = 0
unique_name_in_owner = true
layout_mode = 2
text = " Delete Selected Profile "

[node name="ResetButton" type="Button" parent="VBoxContainer"]
focus_mode = 0
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Reset Selected Profile"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
focus_mode = 0
unique_name_in_owner = true
layout_mode = 2
text = "Close Settings"

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
